# UnderwaterMultiagentExploration

./: CMakeLists.txt  README.md
executables/: CMakeLists.txt  full_interface.cpp
gmrf/: CMakeLists.txt
gmrf/executables/: CMakeLists.txt  load_map_test.cpp  main.cpp  manual.cpp
gmrf/include/: color_mixer.h  colormaps.h  gmrf_configs.h  gmrf_viz.h  msg_assert.h  res_loc.h  res_loc.h.in  scenario.h  settings.h
gmrf/include/gmrf/: gmrf.h
gmrf/resources/configs/maps/: CaseA1.toml  CaseA2.toml  CaseB.toml  CaseC.toml
gmrf/src/: CMakeLists.txt  color_mixer.cpp  configs.cpp  scenario.cpp  viz.cpp
gmrf/src/gmrf/: gmrf.cpp
i_rrtstar/: CMakeLists.txt
i_rrtstar/executables/: CMakeLists.txt  rrt_moving.cpp  rrt_static.cpp
i_rrtstar/include/: res_loc.h  res_loc.h.in  rrt.h  rrt_configs.h  util.h  viz.h
i_rrtstar/resources/configs/: rrt_conf.toml
i_rrtstar/src/: CMakeLists.txt  rrt.cpp  rrt_configs.cpp  util.cpp  viz.cpp
include/: bfs_planner.h  field_interface.h  linestrip.h  logger.h  metrics.h  obstacle_interface.h  rrt_interface.h  sim_interface.h  visual.h
multiagent_sqp/: CMakeLists.txt
multiagent_sqp/executables/: CMakeLists.txt  auv_control.cpp  auv_control_low_level.cpp  auv_sqp.cpp
multiagent_sqp/include/: bicycle_dynamics.h  bluerov_dynamics.h  collision_constraint.h  com_path_tracking.h  configs.h  connectivity_constraint.h  corridor_constraint.h  distribution_cost.h  dynamics.h  hippocampus_dynamics.h  info_field.h  information_cost.h  nearest_obstacle_avoidance.h  opti_wrapper.h  path.h  path_tracking.h  res_loc.h  res_loc.h.in  rrt_util.h  spline.h  sqp_module.h  sqp_multiagent.h
multiagent_sqp/resources/configs/: hippocampus_conf.toml
multiagent_sqp/scripts/: angle_obs.py  corridor_gen.py
multiagent_sqp/scripts/casadi_hess/: evaluate_hess.py  hess.txt
multiagent_sqp/scripts/symbolic_derivations/: collision_avoidance.py  dynamics.py  intersection.py  mpcc_center_of_mass.py  mpcc_linearization.py  mpcc_linearization_pwlin.py  obstacle_avoidance.py
multiagent_sqp/src/: CMakeLists.txt  bicycle_dynamics.cpp  bluerov_dynamics.cpp  collision_constraint.cpp  com_path_tracking.cpp  configs.cpp  connectivity_constraint.cpp  corridor_constraint.cpp  distribution_cost.cpp  hippocampus_dynamics.cpp  info_field.cpp  information_cost.cpp  nearest_obstacle_avoidance.cpp  opti_wrapper.cpp  path.cpp  path_tracking.cpp  rrt_util.cpp  sqp_module.cpp  sqp_multiagent.cpp
multiagent_sqp/src/solver/: solve_compiled.cpp  solve_compiled.h
random_walks/include/: ballistic_motion.h  brownian_random_walk.h  random_walk.h
random_walks/src/: CMakeLists.txt  ballistic_motion.cpp  brownian_random_walk.cpp  random_walk.cpp
resources_build/configs/: bicycle_conf.toml  bluerov_conf.toml  conf_test_field.toml  gmrf_conf.toml  sqp_conf.toml  viz_conf.toml
resources_build/configs/maps/: CaseA.toml
scripts/pyEvaluate/: logHandler.py
src/: CMakeLists.txt  bfs_planner.cpp  field_interface.cpp  linestrip.cpp  logger.cpp  metrics.cpp  obstacle_interface.cpp  rrt_interface.cpp  sim_interface.cpp  visual.cpp
